AG-10044 - Attempt to fix layout issues on whats new

--- a/grid-packages/ag-grid-docs/documentation/src/design-system/_layout.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/_layout.scss
@@ -2,11 +2,16 @@
 
 .layout-grid {
     display: flex;
-    flex-wrap: wrap;
     gap: var(--layout-gap);
     max-width: min(calc(100% - var(--layout-gap) * 2), var(--layout-max-width));
     margin-right: auto;
     margin-left: auto;
+}
+
+@media screen and (max-width: $breakpoint-docs-nav-medium) {
+.layout-grid {
+    flex-wrap: wrap;
+}
 }
 
 .layout-page-max-width {
